update url in standby

--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -17,7 +17,7 @@
   </style>
 <body>
   <div class="misc_text" style="bottom:1vmin; left:1vmin;"> screenings every Monday evening </div>
-  <div class="misc_text" style="bottom:1vmin; right:1vmin;"> a101cinema.info </div>
+  <div class="misc_text" style="bottom:1vmin; right:1vmin;"> aulerius.art/a101cinema </div>
   
 </body>
 </html>
