--- a/sdpilot/index.html
+++ b/sdpilot/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>SD Pilot Devblog</title>
+<title>Diffusion Pilot</title>
 <meta content="Combining Stable Diffusion with 3D in a modular, directable animation workflow whilst making a short film 🖐" name="description">
 <meta content="https://blogger.googleusercontent.com/img/a/AVvXsEhBUfd7bbxwLP1s4mVKXctyx3P7hbNbgd_5jvOlBBpqndJZ9EFntKYZXJFnH6f_2ORswpLt4QseR3t7kIrinxR84nI3Q1LAhv9c_4bhB9_AXUaSmHLulZLFRYSQ-IQPzKHpy2Sw-gvAnzIAPnq3wkOlvJ8CNRwtr0MU5zA-9XvVtCw-eSJXQN4cYfkXbSVx=w1600" property="og:image">
 <meta http-equiv="refresh" content="0; URL=https://diffusionpilot.blogspot.com">
