--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -19,26 +19,19 @@
 <body>
 <div id="content">
 <div id="main_info">
-    <div class="info_group" style="display: none;">
-        <span class="info_content" style="z-index: 99;">screenings every Monday evening at EKA  A101</span> <br>
+    <div class="info_group">
+        <span class="info_content" style="z-index: 99;">screenings every week at EKA A101</span> <br>
     </div>
-    <div class="info_group" style="display: none;">
+    <div class="info_group">
         <span class="info">Next screening:</span> <br>
     </div>
-    <div class="info_group" style="display: none;">
+    <div class="info_group">
       <span id="selection_date" class="info_content"></span> <br>
     </div>
     <div class="info_group">
-      <span class="info">screenings are over</span> <br>
-    </div>
-    <div class="info_group">
-      <span class="info_content">
-	  I (Aurelijus) am taking academic leave and leaving Tallinn for the time being👋<br> If anything similar gets organized next semester, I will update this website.</span><br>
-    </div>
-    <div class="info_group" style="display: none;">
       <span class="info">runtime:</span> <br>
     </div>
-    <div class="info_group" style="display: none;">
+    <div class="info_group">
       <span id="selection_runtime" class="info_content"></span> <br>
     </div>
  </div >
