--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -55,7 +55,7 @@
     
 <script>
 	const sheetId = '1CaKLo95C7vhog53_AyqhrNc19IBVL3TZUWuIaw73_5Q';
-	const sheetName = 'a101';
+	const sheetName = 'aioi';
 	const query = encodeURIComponent('offset 1')
 	const gsheet_url = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?sheet=${sheetName}&tq=${query}`
 	
