--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -22,20 +22,35 @@
     <div class="info_group">
         <span class="info_content" style="z-index: 99;">screenings every week at EKA A101</span> <br>
     </div>
+	
     <div class="info_group">
         <span class="info">Next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span id="selection_date" class="info_content"></span> <br>
+      <span id="selection_date" class="info_content">
+	      Monday, 11th of June, 20:00
+      </span> <br>
+    </div>
+	
+	<div class="info_group">
+      <span class="info">selection:</span><br>
     </div>
     <div class="info_group">
-      <span class="info">runtime:</span> <br>
+      <span id="selection_title" class="info_content">
+	      Tokyo Godfathers (2003)
+      </span> <br>
+    </div>
+	
+    <div class="info_group">
+      <span class="info">runtime:</span><br>
     </div>
     <div class="info_group">
-      <span id="selection_runtime" class="info_content"></span> <br>
+      <span id="selection_runtime" class="info_content">
+	      1h 32m
+      </span> <br>
     </div>
  </div >
- <img id="poster" style="display: none;" src=""></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMTkyNmU2ZjUtNzIwMy00MWRlLWE4ZWQtYzJhYjU0MmUxZjhiXkEyXkFqcGdeQXVyNDgyODgxNjE@._V1_FMjpg_UX1000_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
