revert to null default data

--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -28,7 +28,6 @@
     </div>
     <div class="info_group">
       <span id="selection_date" class="info_content">
-	      Monday, 11th of June, 20:00
       </span> <br>
     </div>
 	
@@ -37,7 +36,6 @@
     </div>
     <div class="info_group">
       <span id="selection_title" class="info_content">
-	      Tokyo Godfathers (2003)
       </span> <br>
     </div>
 	
@@ -46,11 +44,10 @@
     </div>
     <div class="info_group">
       <span id="selection_runtime" class="info_content">
-	      1h 32m
       </span> <br>
     </div>
  </div >
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMTkyNmU2ZjUtNzIwMy00MWRlLWE4ZWQtYzJhYjU0MmUxZjhiXkEyXkFqcGdeQXVyNDgyODgxNjE@._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" src=""></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
