remove or replace versum icons

--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -56,14 +56,6 @@
 			</a>
 		  </div>
 
-		  <div class="link_button">
-			<a href="https://versum.xyz/user/tz1Vzq4UP11ni6H7GZ4UdyRWnUneLWcxkoh9/created">
-			<svg fill="black" width="100" height="100">
-			  <use href="#external_link_icon" />  
-			</svg>
-			<img src="third_party/versum.png"></img>
-			</a>
-		  </div>
 		  </div>
 		</div>
 		<div class="hover_button">
@@ -112,7 +104,7 @@
 		  <svg fill="black" width="100" height="100">
 			<use href="#external_link_icon" />  
 		  </svg>
-		  <img src="third_party/versum.png"></img>
+		  <img src="third_party/objkt.png"></img>
 		   </a>
 		</div>
 		<div id="queue_pos">
@@ -128,7 +120,7 @@
 		<input type="image" class="exit" src="X.gif" />
 		<div class="modal_content_part">
 		  <p><img src="about/about-reside.webp"></img> "every person" is an open ended series of peculiar animated people created by <a href="https://twitter.com/aulerius2">aulerius</a>, each minted as a single edition artwork on tezos blockchain (objkt.com collection).
-		<img src="about/about-curious.webp"></img> In addition, one may become curious about a particular person which prompts the author to look into them deeper and create a detailed illustration, minted on Versum.
+		<img src="about/about-curious.webp"></img> In addition, one may become curious about a particular person, which prompts the author to look into them deeper and create a detailed illustration, which so far have been minted on Versum.
 		  </p>
 		</div>
 		<div class="modal_content_part">
